--- a/3/hw/bonao.html
+++ b/3/hw/bonao.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="index.html" ><img src="img/logo.PNG" alt="logo"></a>
+        <a href="index.html" ><img src="img/logo.png" alt="logo"></a>
     <div class="nav_menu">
         <ul class="nav">
             <li><a href="index.html">Cách Đọc Sách Hiệu Quả</a></li>
