--- a/3/hw/giaotiep.html
+++ b/3/hw/giaotiep.html
@@ -36,7 +36,7 @@
         <div class="text-1">
             <h2>1. Hãy lắng nghe, đừng chỉ chờ đợi để nói.</h2>
             <p>Một trong những vấn đề chính mà mọi người gặp phải khi giao tiếp với người khác là họ không thực sự dành thời gian để lắng nghe. Chắc chắn, họ nghe thấy ý chính chung của những gì người kia đang nói, nhưng họ chủ yếu chỉ đang chờ đợi thời gian cho đến khi họ có thể nói lấy nói để.</p>
-            <p>Hãy thực sự lắng nghe những gì người khác đang nói. Khi người kia đã nói xong (và thậm chí không nghĩ đến việc ngắt lời họ hay nói hết câu của họ), hãy dành một chút thời gian để nghiền ngẫm những gì họ đã nói trước khi trả lời: bạn sẽ có thể xử lý mọi thứ một cách chuyên sâu và đưa ra họ một câu trả lời chân thành.</p>
+            <p>Hãy thực sự lắng nghe những gì người khác đang nói. Khi người kia đã nói xong (và thậm chí không nghĩ đến việc ngắt lời họ hay nói hết câu của họ), hãy dành một chút thời gian để nghiền ngẫm những gì họ đã nói trước khi trả lời: bạn sẽ có thể xử lý mọi thứ một cách chuyên sâu và đưa ra họ một câu trả lời chân thành.</p>
       
         </div>
         
