--- a/7/hw/index.html
+++ b/7/hw/index.html
@@ -13,7 +13,7 @@
             <div class="logo-bar ">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="img/logo.PNG" alt="logo">
+                        <img src="img/logo.png" alt="logo">
                     </a>
                 </div>
                  <div class="search">
