--- a/js-basic/10/hw/index.html
+++ b/js-basic/10/hw/index.html
@@ -782,7 +782,7 @@
      <div class="site-footer">
           <div class="container-sm container">
               <div class="row j-center  ">
-                  <div class="col-7 text-center">
+                  <div class="col-12 col-ms-12 text-center">
                       <div class="widget">
                           <ul class="social list-unstyled ">
                                 <li><a href="#"><i class=" ti  ti-twitter-alt"></i></a></li>
