--- a/js-adv/1/hw/user.html
+++ b/js-adv/1/hw/user.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>User</title>
 </head>
 <body>
-
-    <table>
-        <tbody id="list"></tbody>
-    </table>
-    <script src="js/script.js"></script>
+    <div class="container">
+        <div class="profile"> 
+    </div>
+</div>
+    
+    <script src="profile.js"></script>
 </body>
 </html>
