--- a/project-fe/index.html
+++ b/project-fe/index.html
@@ -29,7 +29,7 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
     />
-
+    <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/footer.css" />
   </head>
@@ -40,17 +40,17 @@
         <nav class="navbar">
           <ul class="menu">
             <li class="menu-item">
-              <a href="" class="menu-link active">Trang chủ</a>
+              <a href="index.html" class="menu-link active">Trang chủ</a>
             </li>
             <li class="menu-item">
-              <a href="store.html" class="menu-link">Cửa hàng</a>
+              <a href="store.html" class="menu-link ">Cửa hàng</a>
             </li>
             <li class="menu-item">
               <a href="" class="menu-link">Loại sản phẩm</a>
 
               <ul class="sub-menu">
                 <li class="sub-item">
-                  <a href="" class="sub-link">Di động</a>
+                  <a href="dienthoai.html" class="sub-link">Di động</a>
                   <ul class="sub2-menu">
                     <li class="sub2-item">
                       <a href="" class="sub2-link">Iphone</a>
@@ -193,7 +193,7 @@
               <br />
               <span class="tagline"> từng sản phẩm</span>
               <br />
-              <a href="#" class="btn-default">Shop Now</a>
+              <a href="store.html" class="btn-default">Shop Now</a>
             </div>
           </div>
           <div
@@ -206,7 +206,7 @@
               <br />
               <span class="tagline"> từng sản phẩm</span>
               <br />
-              <a href="#" class="btn-default">Shop Now</a>
+              <a href="store.html" class="btn-default">Shop Now</a>
             </div>
           </div>
           <div
@@ -219,7 +219,7 @@
               <br />
               <span class="tagline"> từng sản phẩm</span>
               <br />
-              <a href="#" class="btn-default">Shop Now</a>
+              <a href="store.html" class="btn-default">Shop Now</a>
             </div>
           </div>
         </div>
