--- a/project-fe/index.html
+++ b/project-fe/index.html
@@ -71,7 +71,7 @@
                 </li>
 
                 <li class="sub-item">
-                  <a href="" class="sub-link">Laptop</a>
+                  <a href="laptop.html" class="sub-link">Laptop</a>
 
                   <ul class="sub2-menu">
                     <li class="sub2-item">
@@ -96,7 +96,7 @@
                 </li>
 
                 <li class="sub-item">
-                  <a href="" class="sub-link">TV & AV</a>
+                  <a href="tv.html" class="sub-link">TV & AV</a>
                   <ul class="sub2-menu">
                     <li class="sub2-item">
                       <a href="" class="sub2-link">Sony</a>
@@ -113,7 +113,7 @@
                   </ul>
                 </li>
                 <li class="sub-item">
-                  <a href="" class="sub-link">Phụ kiện</a>
+                  <a href="phukien.html" class="sub-link">Phụ kiện</a>
                   <ul class="sub2-menu">
                     <li class="sub2-item">
                       <a href="" class="sub2-link">Tai nghe</a>
@@ -227,6 +227,11 @@
         <div class="swiper-button-prev"></div>
       </div>
     </section>
+    <!-- <div class="container">
+      <div class="button-top">
+        <button type="button" class="btn-top">Top</button>
+      </div>
+    </div> -->
     <section class="Featured-product">
       <div class="container">
         <div class="d-flex align-items-center">
@@ -1962,8 +1967,8 @@
 
     <footer class="footer">
       <div class="container foo-top">
-        <div class="d-flex">
-          <div class="col-2 pd">
+        <div class="d-flex flex-row flex-wrap">
+          <div class="col-12 col-sm-6 col-xl-3 pd">
             <div class="widget widget-navigation">
               <h4 class="widget-title">Giới thiệu về chúng tôi</h4>
               <ul>
@@ -1975,7 +1980,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-2 offset-md-1">
+          <div class="col-12 col-sm-6 col-xl-3 ">
             <div class="widget widget-navigation">
               <h4 class="widget-title">Bạn Cần Hỗ Trợ?</h4>
               <ul>
@@ -1987,7 +1992,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-2 offset-md-1">
+          <div class="col-12 col-sm-6 col-xl-3 ">
             <div class="widget widget-navigation">
               <h4 class="widget-title">Tin tức</h4>
               <ul>
@@ -1997,7 +2002,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-3 offset-md-1">
+          <div class="col-12 col-sm-6 col-xl-3 ">
             <div class="widget widget-app">
               <h4 class="widget-title">experience app on mobile</h4>
               <div class="app-btn">
