--- a/project-fe/index.html
+++ b/project-fe/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <LINK REL="SHORTCUT ICON"  HREF="img/icon.svg">
     <title>GREENTECH</title>
     <link
       rel="stylesheet"
