--- a/project-fe/store.html
+++ b/project-fe/store.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <LINK REL="SHORTCUT ICON"  HREF="img/icon.svg">
     <title>store</title>
     <!-- css-------------------------------------------------------------- -->
     <link
