--- a/project-fe/store.html
+++ b/project-fe/store.html
@@ -3614,6 +3614,6 @@
     ></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/nav.js"></script>
+    <script src="js/header.js"></script>
 </body>
 </html>
