--- a/project-fe/index.html
+++ b/project-fe/index.html
@@ -2050,6 +2050,6 @@
     ></script>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/nav.js"></script>
+    <script src="js/header.js"></script>
   </body>
 </html>
