--- a/project-fe/product-details.html
+++ b/project-fe/product-details.html
@@ -130,7 +130,7 @@
           </li>
         </ul>
       </nav>
-      <div class="icons">
+      <div class="icons-cart">
         
         <div class="fas fa-search" id="search-btn"></div>
         <div class="tooltip-1 ">
@@ -926,72 +926,72 @@
     
 
     <footer class="footer">
-        <div class="container foo-top">
-          <div class="d-flex flex-row flex-wrap">
-            <div class="col-12 col-sm-6 col-xl-3 pd">
-              <div class="widget widget-navigation">
-                <h4 class="widget-title">Giới thiệu về chúng tôi</h4>
-                <ul>
-                  <li><a href="#">Thông tin về công ty</a></li>
-                  <li><a href="#">Lĩnh vực kinh doanh</a></li>
-                  <li><a href="#">Quy chế hoạt động</a></li>
-                  <li><a href="#">Chính sách bảo hành</a></li>
-                  <li><a href="#">Liên hệ hợp tác kinh doanh</a></li>
-                </ul>
+      <div class="container foo-top">
+        <div class="d-flex flex-row flex-wrap">
+          <div class="col-12 col-sm-6 col-xl-3 pd">
+            <div class="widget widget-navigation">
+              <h4 class="widget-title">Giới thiệu về chúng tôi</h4>
+              <ul>
+                <li><a href="#">Thông tin về công ty</a></li>
+                <li><a href="#">Lĩnh vực kinh doanh</a></li>
+                <li><a href="#">Quy chế hoạt động</a></li>
+                <li><a href="#">Chính sách bảo hành</a></li>
+                <li><a href="#">Liên hệ hợp tác kinh doanh</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-xl-3 ">
+            <div class="widget widget-navigation">
+              <h4 class="widget-title">Bạn Cần Hỗ Trợ?</h4>
+              <ul>
+                <li><a href="#">Tư vấn trực tuyến </a></li>
+                <li><a href="#">Thư điện tử</a></li>
+                <li><a href="#">Điện thoại</a></li>
+                <li><a href="#">Trung tâm bảo hành</a></li>
+                <li><a href="#">Gửi ý kiến phản hồi</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-xl-3 ">
+            <div class="widget widget-navigation">
+              <h4 class="widget-title">Tin tức</h4>
+              <ul>
+                <li><a href="#">Tin tuyển dụng</a></li>
+                <li><a href="#">Tin khuyễn mại</a></li>
+                <li><a href="#">Hướng dẫn mua online</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-12 col-sm-6 col-xl-3 ">
+            <div class="widget widget-app">
+              <h4 class="widget-title">experience app on mobile</h4>
+              <div class="app-btn">
+                <a href="#" class="google-play">
+                  <i class="ti-android"></i>
+                  <p>
+                    <span>get it on</span>
+                    <strong>Goole play</strong>
+                  </p>
+                </a>
+                <a href="#" class="app-store">
+                  <i class="ti-apple"></i>
+                  <p><span>get it on</span>app store</p>
+                </a>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-xl-3 ">
-              <div class="widget widget-navigation">
-                <h4 class="widget-title">Bạn Cần Hỗ Trợ?</h4>
-                <ul>
-                  <li><a href="#">Tư vấn trực tuyến </a></li>
-                  <li><a href="#">Thư điện tử</a></li>
-                  <li><a href="#">Điện thoại</a></li>
-                  <li><a href="#">Trung tâm bảo hành</a></li>
-                  <li><a href="#">Gửi ý kiến phản hồi</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-xl-3 ">
-              <div class="widget widget-navigation">
-                <h4 class="widget-title">Tin tức</h4>
-                <ul>
-                  <li><a href="#">Tin tuyển dụng</a></li>
-                  <li><a href="#">Tin khuyễn mại</a></li>
-                  <li><a href="#">Hướng dẫn mua online</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-12 col-sm-6 col-xl-3 ">
-              <div class="widget widget-app">
-                <h4 class="widget-title">experience app on mobile</h4>
-                <div class="app-btn">
-                  <a href="#" class="google-play">
-                    <i class="ti-android"></i>
-                    <p>
-                      <span>get it on</span>
-                      <strong>Goole play</strong>
-                    </p>
-                  </a>
-                  <a href="#" class="app-store">
-                    <i class="ti-apple"></i>
-                    <p><span>get it on</span>app store</p>
-                  </a>
-                </div>
-              </div>
-              <div class="widget widget-social">
-                <h4 class="widget-title">Online shopping</h4>
-                <div class="social-media">
-                  <a href="#"><i class="ti-facebook"></i></a
-                  ><a href="#"><i class="ti-twitter-alt"></i></a
-                  ><a href="#"><i class="ti-pinterest"></i></a
-                  ><a href="#"><i class="ti-instagram"></i></a>
-                </div>
+            <div class="widget widget-social">
+              <h4 class="widget-title">Online shopping</h4>
+              <div class="social-media">
+                <a href="#" class="icon-fb" ><i class="ti-facebook"></i></a
+                ><a href="#" class="icon-twitter"><i class="ti-twitter-alt"></i></a
+                ><a href="#" class="icon-pinterest"><i class="ti-pinterest"></i></a
+                ><a href="#" class="icon-instagram"><i class="ti-instagram"></i></a>
               </div>
             </div>
           </div>
         </div>
-      </footer>
+      </div>
+    </footer>
     <script
     src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
