--- a/project-fe/checkout.html
+++ b/project-fe/checkout.html
@@ -305,7 +305,7 @@
       <div class="container">
         <form class="needs-validation" action="#">
           <div class="d-flex flex-row flex-wrap justify-content-between">
-            <div class="col-12 col-sm-5  mb-4  mr-1 ">
+            <div class="col-12 col-sm-6  mb-4  pr-0 ">
                 <div class="box-cart p-5">
                     <h4
                     class="d-flex justify-content-between align-items-center "
@@ -379,7 +379,7 @@
                 </div>
               
             </div>
-            <div class="col-12 col-sm-6 ">
+            <div class="col-12 col-sm-6  pl-0">
                 <div class="box-information p-5">
                     <h4 class="mb-3">Thông tin khách hàng</h4>
 
