--- a/project-fe/index.html
+++ b/project-fe/index.html
@@ -231,7 +231,7 @@
               </ul>
             </li>
             <li class="menu-item">
-              <a href="" class="menu-link">Giới Thiệu</a>
+              <a href="about.html" class="menu-link">Giới Thiệu</a>
             </li>
             <li class="menu-item">
               <a href="contact.html" class="menu-link">Liên hệ</a>
@@ -285,9 +285,9 @@
           </div>
   
           <div class="total">Tổng : 15.390.000 VND</div>
-          <div class="button-cart row ">
-            <div class="col-6"><a href="cart.html" class="  btn btn-cart ">Chi tiết</a></div>
-            <div class="col-6"><a href="checkout.html" class="  btn  ">Thanh toán</a></div>
+          <div class="button-cart d-flex ">
+            <div class="col-6 p-r-0"><a href="cart.html" class="  btn btn-cart ">Chi tiết</a></div>
+            <div class="col-6 p-l-0"><a href="checkout.html" class="  btn  ">Thanh toán</a></div>
             
           </div>
           
