--- a/project-fe/store.html
+++ b/project-fe/store.html
@@ -281,9 +281,9 @@
         </div>
 
         <div class="total">Tổng : 15.390.000 VND</div>
-        <div class="button-cart row ">
-          <div class="col-6"><a href="cart.html" class="  btn btn-cart ">Chi tiết</a></div>
-          <div class="col-6"><a href="checkout.html" class="  btn  ">Thanh toán</a></div>
+        <div class="button-cart d-flex ">
+          <div class="col-6 p-r-0"><a href="cart.html" class="  btn btn-cart ">Chi tiết</a></div>
+          <div class="col-6 p-l-0"><a href="checkout.html" class="  btn  ">Thanh toán</a></div>
           
         </div>
         
