--- a/project-fe/phone.html
+++ b/project-fe/phone.html
@@ -154,19 +154,19 @@
                 </a>
                 <ul class="sub2-menu">
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">Iphone</a>
+                    <a href="phone.html" class="sub2-link">Iphone</a>
                   </li>
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">Samsung</a>
+                    <a href="phone.html" class="sub2-link">Samsung</a>
                   </li>
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">OPPO</a>
+                    <a href="phone.html" class="sub2-link">OPPO</a>
                   </li>
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">Xiaomi</a>
+                    <a href="phone.html" class="sub2-link">Xiaomi</a>
                   </li>
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">Realme</a>
+                    <a href="phone.html" class="sub2-link">Realme</a>
                   </li>
                 </ul>
               </li>
@@ -176,19 +176,19 @@
 
                 <ul class="sub2-menu">
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">Apple</a>
+                    <a href="laptop.html" class="sub2-link">Apple</a>
                   </li>
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">Samsung</a>
+                    <a href="laptop.html" class="sub2-link">Samsung</a>
                   </li>
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">HP</a>
+                    <a href="laptop.html" class="sub2-link">HP</a>
                   </li>
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">Dell</a>
+                    <a href="laptop.html" class="sub2-link">Dell</a>
                   </li>
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">Asus</a>
+                    <a href="laptop.html" class="sub2-link">Asus</a>
                   </li>
                   
                 </ul>
@@ -198,16 +198,16 @@
                 <a href="tv.html" class="sub-link">TV & AV </a>
                 <ul class="sub2-menu">
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">Sony</a>
+                    <a href="tv.html" class="sub2-link">Sony</a>
                   </li>
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">LG</a>
+                    <a href="tv.html" class="sub2-link">LG</a>
                   </li>
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">Samsung</a>
+                    <a href="tv.html" class="sub2-link">Samsung</a>
                   </li>
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">Tosiba</a>
+                    <a href="tv.html" class="sub2-link">Tosiba</a>
                   </li>
                 </ul>
               </li>
@@ -215,13 +215,13 @@
                 <a href="accessories.html" class="sub-link">Phụ kiện </a>
                 <ul class="sub2-menu">
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">Tai nghe</a>
+                    <a href="accessories.html" class="sub2-link">Tai nghe</a>
                   </li>
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">bàn phím</a>
+                    <a href="accessories.html" class="sub2-link">bàn phím</a>
                   </li>
                   <li class="sub2-item">
-                    <a href="" class="sub2-link">Chuột</a>
+                    <a href="accessories.html" class="sub2-link">Chuột</a>
                   </li>
                  
                 </ul>
@@ -229,7 +229,7 @@
             </ul>
           </li>
           <li class="menu-item">
-            <a href="" class="menu-link">Giới Thiệu</a>
+            <a href="about.html" class="menu-link">Giới Thiệu</a>
           </li>
           <li class="menu-item">
             <a href="contact.html" class="menu-link">Liên hệ</a>
